# jake-gpt

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  Makefile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_plant_knowledge_base.py  0003_companion_relationship_sources.py  0004_companion_candidate_review.py  0005_candidate_csv_review.py  0006_garden_context_engine.py  0007_graph_aware_recommendations.py  0008_persisted_layout_engine.py  0009_property_geocoder_metadata.py
backend/app/: core.py  main.py
backend/app/agents/: planner.py
backend/app/api/: auth.py  deps.py  gardens.py  layouts.py  plans.py  plants.py  properties.py
backend/app/db/: session.py
backend/app/engines/: __init__.py
backend/app/models/: __init__.py  garden.py  plan.py  plant.py  property.py  user.py
backend/app/plant_kb/: README.md  __init__.py  (+18 more)
backend/data/: companion_relationship_candidates_reviewed.jsonl  companion_relationships_seed.jsonl  generated_companion_candidates.jsonl  jakegpt_plant_knowledge.sqlite
backend/reports/: companion_candidate_review.csv  companion_candidate_review_report.md  companion_relationship_report.md
backend/tests/: test_area_persistence.py  test_companion_candidate_generator.py  test_companion_graph_service.py  test_companion_report.py  test_companions.py  test_garden_context_engine.py  test_garden_recommendation_service.py  test_geocoding.py  test_layout_engine.py  test_plan_generation.py  test_plant_kb.py  test_plant_search.py  test_planting_design.py  test_recommendations.py
(+96 files in other folders)
