[project]
name = "jake-gpt-backend"
version = "0.1.0"
description = "FastAPI backend for Jakerton's Garden Planning Tool"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "sqlalchemy==2.0.36",
  "psycopg[binary]==3.2.3",
  "geoalchemy2==0.16.0",
  "alembic==1.14.0",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.0",
  "email-validator==2.2.0",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==4.2.1",
  "python-multipart==0.0.20",
  "httpx==0.28.1"
]

[dependency-groups]
dev = [
  "pytest==8.3.4"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
